2002-02-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/rtems/libio.h: Add #include <rtems/fs.h>.
	Reflect changes due to using rtems/fs.h.
	* include/rtems/libio_.h: Reworked.

2002-02-07	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* libc/gxx_wrappers.c: Add #include <rtems/error.h>.

2002-02-05	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* libc/Makefile.am: Add MULTISUBDIR support.
	* libc/fcntl.c: Add #include <stdarg.h>.
	* libc/privateenv.c: Add #include <stdlib.h>.

2002-01-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/rtems/libio_.h: Remove set_errno_and_return_minus_one.
	* libc/cfsetispeed.c: Include <rtems/seterr.h>.
	Apply rtems_set_errno_and_return_minus_one.
	* libc/cfsetospeed.c: Include <rtems/seterr.h>.
	Apply rtems_set_errno_and_return_minus_one.
	* libc/chdir.c: Include <rtems/seterr.h>.
	Apply rtems_set_errno_and_return_minus_one.
	* libc/chmod.c: Include <rtems/seterr.h>.
	Apply rtems_set_errno_and_return_minus_one.
	* libc/chown.c: Include <rtems/seterr.h>.
	Apply rtems_set_errno_and_return_minus_one.
	* libc/chroot.c: Include <rtems/seterr.h>.
	Apply rtems_set_errno_and_return_minus_one.
	* libc/closedir.c: Include <rtems/seterr.h>.
	Apply rtems_set_errno_and_return_minus_one.
	* libc/eval.c: Include <rtems/seterr.h>.
	Apply rtems_set_errno_and_return_minus_one.
	* libc/fchdir.c: Include <rtems/seterr.h>.
	Apply rtems_set_errno_and_return_minus_one.
	* libc/fchmod.c: Include <rtems/seterr.h>.
	Apply rtems_set_errno_and_return_minus_one.
	* libc/fdatasync.c: Include <rtems/seterr.h>.
	Apply rtems_set_errno_and_return_minus_one.
	* libc/fpathconf.c: Include <rtems/seterr.h>.
	Apply rtems_set_errno_and_return_minus_one.
	* libc/fstat.c: Include <rtems/seterr.h>.
	Apply rtems_set_errno_and_return_minus_one.
	* libc/fsync.c: Include <rtems/seterr.h>.
	Apply rtems_set_errno_and_return_minus_one.
	* libc/ftruncate.c: Include <rtems/seterr.h>.
	Apply rtems_set_errno_and_return_minus_one.
	* libc/getdents.c: Include <rtems/seterr.h>.